# Lab1

./: .gitignore  README.md  deploy.py  lab1.ipynb  model.joblib  pyproject.toml
.devcontainer/: devcontainer.json
assignment/: deploy.py  height_weight_knn.csv  home.ipynb  model.joblib
lab2/: bbc_model.joblib  classifynews.ipynb  deploy.py
lab3/: new.ipynb
lab5/: trainingmodel.ipynb  updated_GUI.py
